# the-daily-holler

./: .gitignore  CRAIGSLIST_INTEGRATION_COMPLETE.md  DAILY_NEWS_SETUP.md  DEPLOYMENT_QUICK_REFERENCE.md  GOOGLE_NEWS_PATWAH_IMPLEMENTATION.md  JOBS_IMPLEMENTATION_SUMMARY.md  JOBS_SCRAPING_SYSTEM.md  Procfile  RAILWAY_CRON_SETUP.md  RAILWAY_DEPLOYMENT.md  README.md  add_more_cities.py  add_remaining_cities.py  build_cities.py  create_full_cities.py  current_cities.txt  daily-article-generator.js  daily-city-articles.js  daily-news-generator.js  generate-all-local-flavor.js  generate_all_cities.py  jobs-admin.html  local-flavor-database.js  monitor-discovery.js  package-lock.json  package.json  parse_cities.py  parse_manual.js  process_cities.js  railway-10-second-generation.js  railway-continuous-generation.js  railway-daily-generation.js  railway-generation.js  railway-minute-generation.js  railway-mixed-generation.js  railway.json  regenerate-sitemap.js  restart-server.sh  run-batch-generation.js  run-daily-generation.js  (+17 more)
holler-discovery/: RANKING_SYSTEM.md  README.md  pyproject.toml  requirements.txt
holler-discovery/config/: feeds.txt
holler-discovery/src/: __init__.py  cli.py  config.py  db.py
holler-discovery/src/ingest/: commoncrawl.py  ct.py  normalize.py  rss.py
holler-discovery/src/pipeline/: chunker.py  filters.py  html_writer.py  manifest.py  ranker.py  sitemap_writer.py
holler-discovery/templates/: day_index.html.j2  discovery_page.html.j2
holler-discovery/tests/: test_chunker.py  test_filters.py  test_ranker.py  test_sitemaps.py
(+62 files in other folders)
