[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "holler-discovery"
version = "0.1.0"
description = "Discovery Feed system for holler.news"
authors = [{name = "Holler.News", email = "admin@holler.news"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "aiohttp>=3.8.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "tldextract>=3.4.0",
    "boto3>=1.26.0",  # For future S3 support
    "psycopg2-binary>=2.9.0",
    "alembic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.scripts]
hndisc = "holler_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
